--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <div class="container p-20 text-center mx-auto">
+    <div class="container px-20 text-center mx-auto">
+            <img src="GIF se.png" alt="" class="w-1/5 mx-auto">
             <input type="text" class="js-userinput bg-neutral-200 py-2 px-3 rounded-lg w-40 md:w-1/2" value="" placeholder="Search...">
             <button class="js-go bg-lime-300 py-2 px-3 rounded-lg">Go</button>
             
